When an image is saved in another format and put in the cache for the new path, the read-only property is unchanged.

Only put in cache under for the new path if the file format did not change
- make file format from DImgInterface accessible from Canvas
- store original format in SavingContext as well as saved-to format
- check when putting in cache in ImageWindow

BUG: 138949

svn path=/trunk/extragear/graphics/digikam/; revision=616109