utilities/imageeditor/canvas/dimginterface.h
@@ -143,6 +143,7 @@ public:
     ICCSettingsContainer *getICCSettings();
 
     QString               getImageFileName();
+    QString               getImageFormat();
 
 protected slots:
 
